2014-11-21  H.J. Lu  <hongjiu.lu@intel.com>

	PR bootstrap/63784
	* configure: Regenerated.

2014-11-21  Jakub Jelinek  <jakub@redhat.com>

	PR target/61137
	* config/ia64/ia64.c (ia64_attribute_takes_identifier_p): New function.
	(TARGET_ATTRIBUTE_TAKES_IDENTIFIER_P): Redefine to it.

2014-11-14  Uros Bizjak  <ubizjak@gmail.com>

	* sanitizer_common/Makefile.am (AM_CXXFLAGS): Use -std=gnu++11.
	* asan/Makefile.am (AM_CXXFLAGS): Ditto.
	* lsan/Makefile.am (AM_CXXFLAGS): Ditto.
	* interception/Makefile.am (AM_CXXFLAGS): Ditto.
	* tsan/Makefile.am (AM_CXXFLAGS): Ditto.
	* libbacktrace/Makefile.am (AM_CXXFLAGS): Ditto.
	* ubsan/Makefile.am (AM_CXXFLAGS): Ditto.
	* sanitizer_common/Makefile.in: Regenerate.
	* asan/Makefile.in: Ditto.
	* lsan/Makefile.in: Ditto.
	* interception/Makefile.in: Ditto.
	* tsan/Makefile.in: Ditto.
	* libbacktrace/Makefile.in: Ditto.
	* ubsan/Makefile.in: Ditto.

2014-11-13  Kostya Serebryany  <kcc@google.com>

	* All source files: Merge from upstream r221802.
	* sanitizer_common/sanitizer_symbolizer_libbacktrace.cc
	(LibbacktraceSymbolizer::SymbolizeData): Replace 'address'
	with 'start' to follow the new interface.
	* asan/Makefile.am (AM_CXXFLAGS): Added -std=c++11.
	* interception/Makefile.am (AM_CXXFLAGS): Added -std=c++11.
	* libbacktrace/Makefile.am (AM_CXXFLAGS): Added -std=c++11.
	* lsan/Makefile.am (AM_CXXFLAGS): Added -std=c++11.
	* sanitizer_common/Makefile.am (sanitizer_common_files): Added new
	files.
	(AM_CXXFLAGS): Added -std=c++11.
	* tsan/Makefile.am (AM_CXXFLAGS): Added -std=c++11.
	* ubsan/Makefile.am (AM_CXXFLAGS): Added -std=c++11.
	* asan/Makefile.in: Regenerate.
	* interception/Makefile.in: Regenerate.
	* libbacktrace/Makefile.in: Regenerate.
	* lsan/Makefile.in: Regenerate.
	* sanitizer_common/Makefile.in: Regenerate.
	* tsan/Makefile.in: Regenerate.
	* ubsan/Makefile.in: Regenerate.

2014-11-11  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	PR target/63610
	* configure: Regenerate.
